Add TicketGainDTO and update TicketGain model: implement DTO for TicketGain, add constructor and setter, and modify repository method to return Optional